--- a/Portfolio site.html
+++ b/Portfolio site.html
@@ -47,7 +47,7 @@
 		</div>
 		<div class="column">
 			<h3 class="projects">LinkedIn Profile</h3>
-			<p> <a href="https://www.linkedin.com/in/zitamonori/"> <img border="4" style="border-color:#7d97ad" alt="Udacity logo" src="Images\linkedin.png" width="150" height="150"> </a>
+			<p> <a href="https://www.linkedin.com/"> <img border="4" style="border-color:#7d97ad" alt="Udacity logo" src="Images\linkedin.png" width="150" height="150"> </a>
 			</p>
 		</div>
 	</div>
